Fixed contrast issues with skip links

--- a/src/views/_screen.scss
+++ b/src/views/_screen.scss
@@ -21,10 +21,9 @@
 	@include navigation-links;
 }
 
-.wb-slc {
-	a {
-		color: #fff;
-	}
+.wb-sl {
+	background: #000;
+	color: #fff;
 }
 
 #wb-bar {
